# nova-narrative

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
docs/: architecture-guide.md  implementation-roadmap-v1.md  system-specification.md
docs/fixtures/: water-margin-regression-excerpt.txt
docs/superpowers/plans/: 2026-04-07-structured-story-engine.md  2026-04-08-review-reader-ui-redesign.md  2026-04-12-macos-icon-mask.md  (+2 more)
scripts/: build-macos-icon.sh
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adaptation.rs  analyzer.rs  compiler.rs  context_builder.rs  error.rs  importer.rs  lib.rs  main.rs  models.rs  provider.rs  rules.rs  runtime.rs  state.rs  store.rs  worldbook.rs
src-tauri/src/app_api/: input_validation.rs
src-tauri/src/application/: mod.rs  project_service.rs  review_service.rs  runtime_service.rs  settings_service.rs
src-tauri/src/commands/: mod.rs  project.rs  review.rs  runtime.rs  settings.rs  shared.rs
src-tauri/src/infra/: ai_settings_repository.rs  diagnostics_repository.rs  mod.rs  path_layout.rs  project_repository.rs  session_repository.rs  storage_manifest_repository.rs
src/lib/: mock-backend.test.ts  mock-backend.ts  rule-helpers.test.ts  rule-helpers.ts  sample-novel.ts  story-helpers.test.ts  story-helpers.ts  text-import.test.ts  text-import.ts  types.ts  ui-layout.test.ts  ui-layout.ts
src/routes/: +page.svelte  page-flow.test.ts  page.startup.test.ts  settings-page.test.ts
(+69 files in other folders)
